--- a/index.html
+++ b/index.html
@@ -15,51 +15,100 @@
   
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
+  <header>
+    <div>
+      <img src="/assets/images/logo.svg" alt="">
+    </div>
+    <nav>
+      <ul>
+        <li>About</li>
+        <li>Services</li>
+        <li>Projects</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="hero">
+      <h1>We are creatives</h1>
+    </section>
+    <section>
+      <article>
+      Transform your brand
 
-  We are creatives
+      We are a full-service creative agency specializing in helping brands grow fast. 
+      Engage your clients through compelling visuals that do most of the marketing for you.
 
-  Transform your brand
+      Learn more
+      </article>
+      <div>
+        <img src="/assets/images/desktop/image-transform.jpg" alt="">
+      </div>
+    </section>
+    <section>
+      <article>
+        Stand out to the right audience
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
+        Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+      
+        Learn more
+      </article>
+      <div>
+        
+        <img src="/assets/images/desktop/image-stand-out.jpg" alt="">
+      </div>
+    </section>
+    <section>
+      <article>
+        Photography
+        Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+        <img src="/assets/images/desktop/image-graphic-design.jpg" alt="">
+      </article>
+      <article>
+        Photography
   Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+        <img src="/assets/images/desktop/image-photography.jpg" alt="">
+      </article>
+    </section>
+    <section>
+      Client testimonials
 
-  Client testimonials
+      We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+      Emily R.
+      Marketing Director
 
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
+      Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+      Thomas S.
+      Chief Operating Officer
 
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
+      Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+      Jennie F.
+      Business Owner
+    </section>
+    <section>
+      <div>
+        <img src="/assets/images/desktop/image-gallery-milkbottles.jpg" alt="">
+      </div>
+      <div>
+        <img src="/assets/images/desktop/image-gallery-orange.jpg" alt="">
+      </div>
+      <div>
+        <img src="/assets/images/desktop/image-gallery-cone.jpg" alt="">
+      </div>
+      <div>
+        <img src="/assets/images/desktop/image-gallery-sugarcubes.jpg" alt="">
+      </div>
+    </section>
+  </main>
+  <footer>
+    <h2>Sunnyside</h2>
+    <ul>
+      <li>About</li>
+      <li>Services</li>
+      <li>Projects</li>
+      <li>Contact</li>
+    </ul>
+  </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
