continue styling 3rd section

--- a/index.html
+++ b/index.html
@@ -63,15 +63,17 @@
     </section>
     <section class="middle-section">
       <article id="graphic-design">
-        <h2>Graphic Design</h2>
-        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention</p>
-        <!-- <img src="/assets/images/desktop/image-graphic-design.jpg" alt=""> -->
+        <div class="label">
+          <h2>Graphic Design</h2>
+          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention</p>
+        </div>  
       </article>
       <article id="photography">
-        <h2>Photography</h2>
-        <p>your credibility by getting the most stunning, high-quality photos that improve your business image.
-        </p>         
-        <!-- <img src="/assets/images/desktop/image-photography.jpg" alt=""> -->
+        <div class="label">
+          <h2>Photography</h2>
+          <p>your credibility by getting the most stunning, high-quality photos that improve your business image.
+          </p>
+        </div>         
       </article>
     </section>
     <section >
