styling testimonials section

--- a/index.html
+++ b/index.html
@@ -76,20 +76,31 @@
         </div>         
       </article>
     </section>
-    <section >
-      Client testimonials
-
-      We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-      Emily R.
-      Marketing Director
-
-      Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-      Thomas S.
-      Chief Operating Officer
-
-      Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-      Jennie F.
-      Business Owner
+    <section id="testimonials">
+      <h2>Client testimonials</h2>
+      <div id="testimonials-wrapper">
+      <article>
+        <img src="/assets/images/image-emily.jpg" alt="">
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+        </p>
+        <p>Emily R.</p>
+        <h3>Marketing Director</h3>  
+      </article>
+      <article>
+        <img src="/assets/images/image-thomas.jpg" alt="">
+        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+        </p>
+        <p>Thomas S.</p>
+        <h3>Chief Operating Officer</h3>   
+      </article>
+      <article>
+        <img src="/assets/images/image-jennie.jpg" alt="">
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+        </p>
+        <p>Jennie F.</p>
+        <h3>Business Owner</h3>  
+      </article>
+    </div>
     </section>
     <section >
       <div>
