responsiveness fixed for 1920 - 1440 - 1280px

--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
         <img src="/assets/images/image-emily.jpg" alt="">
         <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
         </p>
-        <p>Emily R.</p>
+        <p class="name">Emily R.</p>
         <h3>Marketing Director</h3>  
       </article>
       <article>
         <img src="/assets/images/image-thomas.jpg" alt="">
         <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
         </p>
-        <p>Thomas S.</p>
+        <p class="name">Thomas S.</p>
         <h3>Chief Operating Officer</h3>   
       </article>
       <article>
         <img src="/assets/images/image-jennie.jpg" alt="">
         <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
         </p>
-        <p>Jennie F.</p>
+        <p class="name">Jennie F.</p>
         <h3>Business Owner</h3>  
       </article>
     </div>
     </section>
-    <section >
+    <section id="prefooter-photos">
       <div>
         <img src="/assets/images/desktop/image-gallery-milkbottles.jpg" alt="">
       </div>
@@ -117,13 +117,19 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer >
     <h2>Sunnyside</h2>
     <ul>
       <li>About</li>
       <li>Services</li>
       <li>Projects</li>
       <li>Contact</li>
+    </ul>
+    <ul id="icons">
+      <li><img src="/assets/images/icon-facebook.svg"></li>
+      <li><img src="/assets/images/icon-instagram.svg"></li>
+      <li><img src="/assets/images/icon-pinterest.svg"></li>
+      <li><img src="/assets/images/icon-twitter.svg"></li>
     </ul>
   </footer>
   <div class="attribution">
