jQuery imported - reading script for mobile menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <img src="/assets/images/logo.svg" alt="">
     </div>
     <nav>
-      <ul>
+      <div id="hamburger">
+        <img src="/assets/images/icon-hamburger.svg" alt="menu-button">
+      </div>
+      <ul id="mob-menu">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
@@ -137,5 +140,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/assets/js/script.js"></script>
 </html>
